some improvements, more to come soon
Signed-off-by: Brandon B. Jozsa <bjozsa@jinkit.com>

--- a/cali-kind.env
+++ b/cali-kind.env
@@ -1,15 +1,29 @@
 #!/usr/bin/env bash
 
-####################################################
-# Global exports:
-## VERSION DETAILS:
-## Example: v3.8.2 == v"${VERSION_CALICO_MAJ}"."${VERSION_CALICO_MIN}"."${VERSION_CALICO_PCH}"
+# Setting up colors for other scripts.
+# TODO: Make this more dynamic or allow users to turn on/off if they want.
+# TODO: I know that things don't really need to be exported, so we'll make required variables local in the future. Right now I'm just being lazy.
+# Color Definitions:
+export CLEAR='\033[0m'
+export RED='\033[31m'
+export GREEN='\033[32m'
+export YELLOW='\033[33m'
+export BOLD_RED='\033[1m\033[31m'
+export BOLD_GREEN='\033[1m\033[32m'
+export BOLD_YELLOW='\033[1m\033[33m'
 
 ####################################################
+#  Global exports:
+export GLOBAL_DEPLOY_CNI="true"
+
+####################################################
+#  Version exports:
 ## Version Kubernetes: v.1.15.0
 ## Version Calico CNI: 0.3.1
 ## Version Calico: v3.8.2
 ## Version kind: 0.4.0
+##
+## Example: v3.8.2 == v"${VERSION_CALICO_MAJ}"."${VERSION_CALICO_MIN}"."${VERSION_CALICO_PCH}"
 export VERSION_CALICO_MAJ="3"
 export VERSION_CALICO_MIN="8"
 export VERSION_CALICO_PCH="1"
@@ -22,13 +36,13 @@ export VERSION_KUBE_MIN="15"
 export VERSION_KUBE_PCH="0"
 
 ####################################################
-# CONFIGRED Kind Components:
+#  CONFIGRED Kind Components:
 export KIND_NAME_CLUSTER="calico-testing"
 export KIND_CIDR_SRV="10.96.0.1/12"
-export KIND_CIDR_POD="10.244.0.0/16"
+export KIND_CIDR_POD="10.25.0.0/22"
 
 ####################################################
-# CONFIGRED COMPONENTS - CALICO:
+#  CONFIGRED COMPONENTS - CALICO:
 export CALICO_CIDR_POD="${KIND_CIDR_POD}"
 export CALICO_DISABLE_FILE_LOGGING="true"
 export CALICO_IPV4POOL_CIDR="${KIND_CIDR_POD}"
@@ -40,19 +54,18 @@ export IP="autodetect"
 export WAIT_FOR_DATASTORE="true"
 
 ####################################################
-# CONFIGRED COMPONENTS - CALICO CONTROLLER:
+#  CONFIGRED COMPONENTS - CALICO CONTROLLER:
 export DATASTORE_TYPE="${DATASTORE_TYPE}"
 export ENABLED_CONTROLLERS="node"
 
 ####################################################
-# CONFIGRED COMPONENTS - FELIX:
+#  CONFIGRED COMPONENTS - FELIX:
 export FELIX_DEFAULTENDPOINTTOHOSTACTION="ACCEPT"
 export FELIX_HEALTHENABLED="true"
 export FELIX_IGNORELOOSERPF="true"
 export FELIX_IPINIPMTU="1440"
 export FELIX_IPV6SUPPORT="false"
 export FELIX_LOGSEVERITYSCREEN="info"
-
 
 ####################################################
 ####################################################
@@ -117,3 +130,7 @@ export FELIX_LOGSEVERITYSCREEN="info"
 # export FELIX_VXLANVNI="4096"
 # export FELIX_TYPHAADDR=""
 # export FELIX_TYPHAK8SSERVICENAME=""
+
+# CONFIGURED COMPONENTS - Kubernetes (This terminal session) :
+export KUBECONFIG="$(kind get kubeconfig-path --name="${KIND_NAME_CLUSTER}")"
+export KUBE_EDITOR="vi"
