--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,6 +24,7 @@ jobs:
         docker images
         chmod +x cali-kind-*
         ./cali-kind-deploy
+        ./manifests/calico-deployment.yaml
         kubectl cluster-info
         kubectl get pods -n kube-system
         ./cali-kind-destroy
