--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,7 +24,10 @@ jobs:
         docker images
         chmod +x cali-kind-*
         ./cali-kind-deploy
-        kubectl apply -f ./manifests/calico-deployment.yaml
+        kubectl apply -f manifests/calico-deployment.yaml
+        kubectl get pods -n kube-system
+        ./checks/check-calico-controller
+        ./checks/check-calico-node
         kubectl cluster-info
         kubectl get pods -n kube-system
         ./cali-kind-destroy
