--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,11 +24,15 @@ jobs:
         docker images
         chmod +x cali-kind-*
         ./cali-kind-deploy
+        pushd ./checks
         ./checks/check-kube-apiserver
+        popd
         kubectl apply -f manifests/calico-deployment.yaml
         kubectl get pods -n kube-system
+        pushd ./checks
         ./checks/check-calico-controller
         ./checks/check-calico-node
+        popd
         kubectl cluster-info
         kubectl get pods -n kube-system
         ./cali-kind-destroy
